for maven build change target version to 11